--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-dotenv": "^3.4.8",
     "react-native-flipper": "^0.194.0",
     "react-native-gesture-handler": "^2.11.0",
     "react-native-mmkv": "^2.8.0",
@@ -33,7 +35,9 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.24",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
