--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-dotenv": "^3.4.8",
@@ -22,11 +23,13 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-mmkv": "^2.8.0",
     "react-native-reanimated": "^3.3.0",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-redux": "^8.1.0",
     "redux-flipper": "^2.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "use-bus": "^2.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
