--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-dotenv": "^3.4.8",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-flipper": "^0.194.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-mmkv": "^2.8.0",
