--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "react": "18.2.0",
-    "react-native": "0.71.10",
+    "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-flipper": "^0.194.0",
@@ -40,11 +40,12 @@
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/runtime": "^7.22.10",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.2",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.20",
+    "@react-native/metro-config": "^0.72.11",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
@@ -56,5 +57,8 @@
     "react-native-eject": "^0.2.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
