--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,10 @@ def enableProguardInReleaseBuilds = true
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
+
+    buildFeatures {
+        viewBinding true
+    }
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -118,6 +122,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation("com.tencent:mmkv:1.3.1")
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
