--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-flipper": "^0.194.0",
+    "react-native-flipper": "^0.212.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-mmkv": "^2.10.1",
+    "react-native-mmkv-flipper-plugin": "^1.0.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.1",
@@ -41,11 +42,11 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/runtime": "^7.22.10",
     "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.20",
-    "@react-native/metro-config": "^0.72.11",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
