--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "android:dev-release": "react-native run-android --mode release",
+    "ios:dev-release": "react-native run-ios --mode Release",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
