--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "mitt": "^3.0.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-dotenv": "^3.4.8",
+    "react-native-dotenv": "^3.4.9",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-flipper": "^0.212.0",
     "react-native-gesture-handler": "^2.12.1",
-    "react-native-mmkv": "^2.10.1",
+    "react-native-mmkv": "^2.10.2",
     "react-native-mmkv-flipper-plugin": "^1.0.0",
     "react-native-reanimated": "^3.4.2",
     "react-native-redash": "^18.1.0",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
     "react-navigation-helpers": "^2.3.1",
     "react-redux": "^8.1.2",
@@ -39,26 +39,26 @@
     "use-bus": "^2.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/runtime": "^7.22.10",
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/runtime": "^7.22.15",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.2",
-    "@types/jest": "^29.5.3",
-    "@types/lodash": "^4.14.195",
-    "@types/react": "^18.2.20",
+    "@types/jest": "^29.5.4",
+    "@types/lodash": "^4.14.198",
+    "@types/react": "^18.2.21",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.14",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.5.0",
-    "eslint": "^8.46.0",
-    "jest": "^29.5.0",
-    "metro-react-native-babel-preset": "0.76.6",
-    "prettier": "^3.0.1",
+    "@types/react-test-renderer": "^18.0.1",
+    "babel-jest": "^29.6.4",
+    "eslint": "^8.48.0",
+    "jest": "^29.6.4",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "^3.0.3",
     "react-native-eject": "^0.2.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=16"
